# PromptManeger

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  auth_service.py  crud.py  database.py  diagnostic.py  docker-compose-dev.yml  get_config.py  main.py  models.py  optimizer_service.py  prompts.db.bak_20260517_project_roles  pyproject.toml  requirements.txt  schemas.py  security.py
.github/workflows/: docker.yml
alembic/: env.py
alembic/versions/: 20260424_0001_initial_with_tags.py  20260426_0002_replace_content_with_prompt_components.py  20260426_0003_unique_prompt_version_content_fields.py  20260517_0004_drop_legacy_optimizer_config_fields.py  20260517_0004_require_prompt_name_project.py  20260517_0005_auth_users_configs_rbac.py  20260517_0006_normalize_projects_table.py  20260517_0007_normalize_roles_table.py  20260517_0008_prompt_audit_and_token_refresh.py  20260517_0009_add_viewer_role.py  20260517_0010_backfill_legacy_prompt_audit_authors.py
loadtests/: README.md  benchmark_rps.py  generate_charts.py  locustfile.py
loadtests/results/: u10_stats.csv  u10_stats_history.csv  u120_stats_history.csv  u20_stats_history.csv  u40_stats.csv  u40_stats_history.csv  u80_stats.csv  u80_stats_history.csv
loadtests/results/final_clean/: u10_stats.csv  u10_stats_history.csv  u20_stats.csv  u20_stats_history.csv  u40_stats.csv  u40_stats_history.csv
loadtests/results/final_mixed/: u10_stats_history.csv  u20_stats.csv  u20_stats_history.csv  u40_stats.csv  u40_stats_history.csv
snippets/: task_snippet.py  test_api.py  test_snippet.py
tests/: conftest.py
tests/e2e/: test_e2e_full_flow.py
tests/integration/: test_auth_rbac_endpoints.py  test_optimize_config_endpoint.py  test_optimize_endpoints.py  test_prompt_endpoints.py  test_race_conditions.py
tests/smoke/: test_smoke.py
tests/unit/: test_unit_optimizer_and_crud.py
ui/css/: app.css  fonts.css
ui/html/: index.html
ui/js/: app-simple-test.js  app.js
