[project]
name = "prompt-manager"
version = "0.1.0"
description = "Local FastAPI service for storing, versioning, and tagging LLM prompts"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "requests>=2.33.1",
    "greaterprompt>=0.2.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",       # FastAPI TestClient
    "pytest>=8.3.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "locust>=2.31.0",
    "matplotlib>=3.9.0",
    "sqlalchemy[mypy]>=2.0.0",
    "types-requests>=2.33.0",
]

# ---------------------------------------------------------------------------
# Dependency groups
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "locust>=2.31.0",
    "matplotlib>=3.9.0",
    "sqlalchemy[mypy]>=2.0.0",
    "types-requests>=2.33.0",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TC", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # FastAPI uses Query/Depends in function signatures by design
]

[tool.ruff.isort]
known-first-party = ["crud", "database", "models", "schemas"]

[tool.ruff.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["greaterprompt.*", "transformers.*"]
ignore_missing_imports = true
